# packages/backend/src/modules/expenses/expenses.controller.ts
@@ -22,7 +22,6 @@ import {
 import { AccountType } from '@prisma/client';
 
 import { UserId } from '../../types/user-id';
-import { ApiTransactionListGroupDto } from '../../utils/transaction-list-group.decorator';
 import { ValidateEntityId } from '../../utils/validate-entity-id.pipe';
 import { LoggedIn } from '../auth/decorators/loggedIn.decorators';
 import { UserIdDecorator } from '../users/users.decorators';
@@ -41,7 +40,7 @@ export class ExpensesController {
   constructor(private readonly expensesService: ExpensesService) {}
 
   @Get()
-  @ApiTransactionListGroupDto(ExpenseListItemDto)
+  @ApiOkResponse({ type: ExpenseListItemDto, isArray: true })
   @ApiQuery({
     name: 'month',
     required: false,
