# packages/backend/src/modules/incomes/incomes.controller.ts
@@ -22,7 +22,6 @@ import {
 import { AccountType } from '@prisma/client';
 
 import { UserId } from '../../types/user-id';
-import { ApiTransactionListGroupDto } from '../../utils/transaction-list-group.decorator';
 import { ValidateEntityId } from '../../utils/validate-entity-id.pipe';
 import { LoggedIn } from '../auth/decorators/loggedIn.decorators';
 import { UserIdDecorator } from '../users/users.decorators';
@@ -41,7 +40,7 @@ export class IncomesController {
   constructor(private readonly incomesService: IncomesService) {}
 
   @Get()
-  @ApiTransactionListGroupDto(IncomeListItemDto)
+  @ApiOkResponse({ type: IncomeListItemDto, isArray: true })
   @ApiQuery({
     name: 'month',
     required: false,
